--- a/src/styleshiets/global.css
+++ b/src/styleshiets/global.css
@@ -1,3 +1,14 @@
+Body {
+  color: rgba(255, 255, 255, 0.87);
+  width: 100%;
+  height: 100vh;
+  background-color: #535353b5;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
 /* Root */
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -6,21 +17,31 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #391c1c;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
-Body{
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #181818;
-  margin: 0px;
-  padding: 0px;
+
+.Container {
+  display: flex;
+  width: 100%;
+  height: 100vh;
   overflow: hidden;
-  box-sizing: border-box;
+  text-align: center;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+
 }
+
+
+
+
+
+
 
 /* Main */
 .custom-input {
@@ -35,7 +56,7 @@ Body{
   padding-right: 20px;
   border: 0px;
   border-bottom: 2px dotted #007bff77;
-  border-radius:10px 10px 0px 0px;
+  border-radius: 10px 10px 0px 0px;
   outline: none;
   background-color: rgba(0, 0, 0, 0.212);
 }
@@ -48,7 +69,8 @@ Body{
   font-size: 14px;
   color: #f7f7f7;
 }
-body .button_login_reg{
+
+body .button_login_reg {
   min-width: 100px;
   border: 2px solid black;
   border-radius: 10px;
